--- a/US_Bikeshare_analysis_project_udacity/Readme
+++ b/US_Bikeshare_analysis_project_udacity/Readme
@@ -1,2 +1,1 @@
-In this project, I used Python to explore data related to bikeshare systems for three major bikeshare systems in the United States.
-I performed data wrangling to unify the format of data from the three systems and computed descriptive statistics.
+In this project, I used Python to explore data related to bikeshare systems for three major bikeshare systems in the United States. I performed data wrangling to unify the format of data from the three systems and computed descriptive statistics.
